lib/parser/janeiro.treetop
grammar Janeiro

  rule program
    expression* <Program> 
  end
 
  rule expression
    whitespace? message whitespace? <Expression>
  end

  rule message
    whitespace? (identifier / number / string / operator) whitespace? arguments? <Message>
  end

  rule arguments
    ("(" / "[" / "{") (argument ("," argument)*) (")" / "]" / "}") <ArgumentList>
  end

  rule argument
    whitespace? expression whitespace? <Argument>
  end

  rule operator
    ":" / "." / "'" / "~" / "!" / "@" / "$" / "%" / "^" / "&" / "*" / "-" / "+" /
     "/" / "=" / "{" / "}" / "[" / "]" / "|" / "<" / ">" / "?"
  end

  rule letter
    [a-zA-Z]
  end

  rule identifier
    (letter / "_") (letter / digit / "_")*
  end

  rule string
    '"' ('\\"' / [^"])* '"' <String>
  end

  rule digit
    [0-9]
  end

  rule number
    "-"? (("0" [xX] [a-fA-F0-9]+) / (digit+ ("." digit*)? ("e" "-"? digit+)?)) <Number>
  end

  rule whitespace
    space / comment
  end

  rule space
    [\s]*
  end

  rule separator
    " " / "\f" / "\t"
  end

  rule terminator
    separator* ';' / whitespace*
  end 

  rule comment
    ('#' (!newline .)* newline) / ("//" (!newline .)* newline)
  end

  rule newline
    "\n" / "\r" / "\r\n"
  end
end
